# Nemac

./: .gitignore  CMakeLists.txt  README.md  test.sh
panel/: CMakeLists.txt  FileModel.cpp  FileModel.h  MprisBackend.cpp  MprisBackend.h  PackageBackend.cpp  PackageBackend.h  PanelBridge.cpp  PanelBridge.h  PanelWindow.cpp  PanelWindow.h  TermBackend.cpp  TermBackend.h  WallpaperModel.cpp  WallpaperModel.h  main.cpp  qml.qrc  resources.qrc
panel/qml/: AppsView.qml  Clock.qml  ClockView.qml  FilesView.qml  Main.qml  MediaView.qml  PlayerPopup.qml  TermView.qml  WallpaperView.qml  main.qml
panel/src/: main.cpp  mpris.cpp  mpris.h  panel.cpp  panel.h
panel/widgets/: AppManager.cpp  AppManager.h  Clock.cpp  Clock.h  FileBrowser.cpp  FileBrowser.h  MediaPlayer.cpp  MediaPlayer.h  Terminal.cpp  Terminal.h  WallpaperPicker.cpp  WallpaperPicker.h
src/compositor/: bar.cpp  compositor.cpp  compositor.h  panel.cpp  render.cpp  shaders.h  texture.cpp
src/core/: launcher.cpp  launcher.h  main.cpp  util.h
src/gpu/: gpu.cpp  gpu.h
src/monitor/: monitor.cpp  monitor.h
src/mpris/: mpris.cpp  mpris.h
src/updater/: updater.cpp  updater.h
src/wallpaper/: wallpaper.cpp  wallpaper.h
src/wm/: types.h  wm.cpp  wm.h
tools/: build.sh  installer.sh  test_fbconfig.cpp
